[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/levels menu/HINT BUTTON.png" type="Texture" id=1]
[ext_resource path="res://scenes/game_buttons.gd" type="Script" id=2]
[ext_resource path="res://assets/levels menu/cancel_up.png" type="Texture" id=3]
[ext_resource path="res://assets/levels menu/cancel_down.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/levels menu/PARAMETER.png" type="Texture" id=7]
[ext_resource path="res://assets/levels menu/PARAMETER down.png" type="Texture" id=8]
[ext_resource path="res://assets/levels menu/touches_up.png" type="Texture" id=9]
[ext_resource path="res://assets/levels menu/HINT down.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[node name="game_buttons" type="Node2D"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 67.0
margin_right = 715.0
margin_bottom = 240.0
size_flags_horizontal = 3
custom_constants/separation = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_right = 84.0
margin_bottom = 173.0
texture = ExtResource( 9 )

[node name="touches_text" type="Label" parent="HBoxContainer/touch"]
modulate = Color( 0.439216, 0.454902, 0.596078, 1 )
margin_top = -1.0
margin_right = 83.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="TextureButton" parent="HBoxContainer"]
visible = false
margin_right = 84.0
margin_bottom = 173.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="cancels_text" type="Label" parent="HBoxContainer/cancel"]
modulate = Color( 0.439216, 0.454902, 0.596078, 1 )
margin_left = 3.0
margin_top = 5.0
margin_right = 79.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="TextureButton" parent="HBoxContainer"]
visible = false
margin_right = 84.0
margin_bottom = 173.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint" type="Label" parent="HBoxContainer/help"]
modulate = Color( 0.439216, 0.454902, 0.596078, 1 )
margin_left = 10.0
margin_top = -2.0
margin_right = 69.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 66.0
margin_top = 1387.0
margin_right = 670.0
margin_bottom = 1509.0
custom_constants/separation = 420
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="parameter" type="TextureButton" parent="HBoxContainer2"]
visible = false
margin_left = 257.0
margin_right = 347.0
margin_bottom = 122.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="HBoxContainer2/parameter" to="." method="_on_parameter_pressed"]
